implmenting Base64 Encoder from Android